--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@discord/embedded-app-sdk": "^1.2.0",
     "phaser": "^3.80.1",
+    "phaser3-rex-plugins": "^1.80.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
